--- a/applications/hello-kenzan/Jenkinsfile
+++ b/applications/hello-kenzan/Jenkinsfile
@@ -12,15 +12,15 @@ node {
     imageName = "${registryHost}${appName}:${tag}"
     env.BUILDIMG=imageName
 
-    stage "Build"
-    
+    stage ("Build") {
         sh "docker build -t ${imageName} part1/hello-kenzan"
-    
-    stage "Push"
+    }
 
+    stage ("Push") {
         sh "docker push ${imageName}"
-
-    stage "Deploy"
-
-        sh "sed 's#__IMAGE__#'$BUILDIMG'#' part1/hello-kenzan/k8s/deployment.yaml | kubectl apply -f -"
+    }
+    stage ("Deploy") {
+        sh 'ls'
+	sh "sed 's#__IMAGE__#'$BUILDIMG'#' part1/hello-kenzan/k8s/deployment.yaml | kubectl apply -f -"
+    }
 }
