--- a/applications/hello-kenzan/Jenkinsfile
+++ b/applications/hello-kenzan/Jenkinsfile
@@ -20,7 +20,13 @@ node {
         sh "docker push ${imageName}"
     }
     stage ("Deploy") {
-        sh 'ls'
-	sh "sed 's#__IMAGE__#'$BUILDIMG'#' part1/hello-kenzan/k8s/deployment.yaml | kubectl apply -f -"
+	steps {
+	    withCredentials([
+		file(credentialsId: "/var/jenkins_home/.kube/config", variable: 'FILE'),
+	    ]) {
+            sh 'ls'
+	    sh "sed 's#__IMAGE__#'$BUILDIMG'#' part1/hello-kenzan/k8s/deployment.yaml | kubectl apply -f -"
+	    }
+	}
     }
 }
