--- a/applications/hello-kenzan/k8s/deployment.yaml
+++ b/applications/hello-kenzan/k8s/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: hello-kenzan
@@ -14,12 +14,10 @@ spec:
   type: NodePort
 
 ---
-apiVersion: apps/v1beta1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: hello-kenzan
-  labels:
-    app: hello-kenzan
 spec:
   strategy:
     type: Recreate
