--- a/applications/hello-kenzan/k8s/deployment.yaml
+++ b/applications/hello-kenzan/k8s/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: hello-kenzan
@@ -18,10 +18,16 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: hello-kenzan
+  labels:
+    app: hello-kenzan
 spec:
   strategy:
     type: Recreate
   template:
+    metadata:
+      labels:
+        app: hello-kenzan
+        tier: hello-kenzan
     spec:
       containers:
       - image: 127.0.0.1:30400/hello-kenzan:$BUILD_TAG
