--- a/applications/hello-kenzan/k8s/deployment.yaml
+++ b/applications/hello-kenzan/k8s/deployment.yaml
@@ -33,3 +33,6 @@ spec:
         ports:
         - containerPort: 80
           name: hello-kenzan
+      selector:
+        matchLabels:
+          app: hello-kenzan
