--- a/applications/hello-kenzan/k8s/deployment.yaml
+++ b/applications/hello-kenzan/k8s/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-kenzan
+  namespace: default
   labels:
     app: hello-kenzan
 spec:
@@ -17,9 +18,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-kenzan
+  namespace: default
   labels:
     app: hello-kenzan
 spec:
+  selector:
+    matchLabels:
+      app: hello-kenzan
   strategy:
     type: Recreate
   template:
@@ -33,6 +38,3 @@ spec:
         ports:
         - containerPort: 80
           name: hello-kenzan
-      selector:
-        matchLabels:
-          app: hello-kenzan
