--- a/applications/hello-kenzan/k8s/deployment.yaml
+++ b/applications/hello-kenzan/k8s/deployment.yaml
@@ -33,7 +33,7 @@ spec:
         app: hello-kenzan
     spec:
       containers:
-      - image: 127.0.0.1:30400/hello-kenzan:$BUILD_TAG
+      - image: 127.0.0.1:30400/hello-kenzan:latest
         name: hello-kenzan
         ports:
         - containerPort: 80
